# EDGAR-API

./: .gitignore  .project  EDGAR.py  pyproject.toml  requirements.txt
EDGAR-API/: EDGAR-API.py
experiments/: zipfiles.ipynb  zipfiles.py
