[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "EDGAR_API"
version = "2023.09.01"
description = "API that mirrors a subset of the EDGAR API plus som,e additional utilities"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Rob Wolfe - Port Wallis Technologies", email = "rwolfe@portwallistechnologies.com" }]
maintainers = [{ name = "Rob Wolfe - Port Wallis Technologies", email = "rwolfe@portwallistechnologies.com" }]
keywords = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["fastapi", "pydantic"]

[project.urls]
Homepage = "https://edgar_api.portwallistechnologies.io"
Documentation = "https://edgar_api.portwallistechnologies.io/docs"
Repository = "https://github.com/Port-Wallis-Technologies/EDGAR-API.git"
Changelog = "https://github.com/Port-Wallis-Technologies/EDGAR-API/blob/master/CHANGELOG.md"